--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -184,3 +184,116 @@ header:has(.mobile-toggle:checked) {
         width: 22px;
     }
 }
+
+
+//-------------------------CONTACT FORM-------------------------//
+
+.main-content {
+    margin-top: 14px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.main-title {
+    text-align: center;
+    font-family: Poppins;
+    width: 184px; 
+    margin-bottom: 25px;
+
+    h1 {
+        font-size: 24px;
+        font-weight: bold;
+        color: $black;
+        margin-bottom: 10px;
+    }
+
+    p {
+        font-size: 14px;
+        font-weight: 500;
+        color: $darkgrey;
+        line-height: normal;
+    }
+}
+
+.contact-info-form {
+    display: flex;
+    flex-direction: column;
+    margin: 0 25px;
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: $white;
+    background-color: $black;
+    border-radius: 5px;
+    font-family: Poppins;
+    position: relative;
+
+    h3 {
+        font-size: 20px;
+        font-weight: 600;
+        margin: 15px 0 6px; 
+        line-height: normal;
+        letter-spacing: normal;
+    }
+
+    & > p {
+        font-size: 12px;
+        font-weight: 400;
+        color: $lightgrey;
+    }
+
+    & > img {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        width: 80px;
+        height: 102px;
+    }
+
+    .ellipse-small {
+        width: 54px;
+        height: 54px;
+        right: 31px;
+        bottom: 52px;
+    }
+}
+
+.contact-info-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    margin-top: 15px;
+
+    &:last-child {
+        margin-bottom: 58px;
+    }
+
+    p {
+        font-size: 12px;
+        font-weight: normal;
+        color: $white;
+        max-width: 221px;
+        margin-top: 15px;
+        text-align: center;
+        line-height: normal;
+        letter-spacing: normal;
+    }
+   
+}
+
+.contact-socia {
+    padding: 58px 0 25px;
+    width: 138px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+     
+    img {
+        width: 30px;
+    }
+}
