--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -394,9 +394,11 @@ header:has(.mobile-toggle:checked) img {
   filter: invert(100%);
 }
 
-.main-menu {
-  margin-right: 60px;
-  margin-left: auto;
+@media (min-width: 1025px) {
+  .main-menu {
+    margin-right: 60px;
+    margin-left: auto;
+  }
 }
 
 .header-content {
@@ -548,6 +550,11 @@ header:has(.mobile-toggle:checked) img {
   align-items: center;
   flex-direction: column;
 }
+@media (min-width: 1025px) {
+  .main-content {
+    margin-top: 80px;
+  }
+}
 
 .main-title {
   text-align: center;
@@ -555,11 +562,22 @@ header:has(.mobile-toggle:checked) img {
   width: 184px;
   margin-bottom: 25px;
 }
+@media (min-width: 1025px) {
+  .main-title {
+    width: 500px;
+    margin-bottom: 50px;
+  }
+}
 .main-title h1 {
   font-size: 24px;
   font-weight: bold;
   color: #000;
   margin-bottom: 10px;
+}
+@media (min-width: 1025px) {
+  .main-title h1 {
+    font-size: 40px;
+  }
 }
 .main-title p {
   font-size: 14px;
@@ -567,11 +585,25 @@ header:has(.mobile-toggle:checked) img {
   color: #717171;
   line-height: normal;
 }
+@media (min-width: 1025px) {
+  .main-title p {
+    font-size: 18px;
+  }
+}
 
 .contact-info-form {
+  box-shadow: 0 0 60px 30px rgba(0, 0, 0, 0.03);
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   margin: 0 25px;
+}
+@media (min-width: 1025px) {
+  .contact-info-form {
+    flex-direction: row;
+    max-width: 1200px;
+    max-height: 667px;
+  }
 }
 
 .contact-info {
@@ -583,18 +615,37 @@ header:has(.mobile-toggle:checked) img {
   border-radius: 5px;
   font-family: Poppins;
   position: relative;
+  padding: 15px 0 0 0;
+}
+@media (min-width: 1025px) {
+  .contact-info {
+    width: 491px;
+    align-items: start;
+    padding: 40px 0 0 40px;
+  }
 }
 .contact-info h3 {
   font-size: 20px;
   font-weight: 600;
-  margin: 15px 0 6px;
+  margin-bottom: 6px;
   line-height: normal;
   letter-spacing: normal;
+}
+@media (min-width: 1025px) {
+  .contact-info h3 {
+    font-size: 28px;
+  }
 }
 .contact-info > p {
   font-size: 12px;
   font-weight: 400;
   color: #c9c9c9;
+}
+@media (min-width: 1025px) {
+  .contact-info > p {
+    font-size: 18px;
+    margin-bottom: 111px;
+  }
 }
 .contact-info > img {
   position: absolute;
@@ -603,11 +654,25 @@ header:has(.mobile-toggle:checked) img {
   width: 80px;
   height: 102px;
 }
+@media (min-width: 1025px) {
+  .contact-info > img {
+    width: 180px;
+    height: 183px;
+  }
+}
 .contact-info .ellipse-small {
   width: 54px;
   height: 54px;
   right: 31px;
   bottom: 52px;
+}
+@media (min-width: 1025px) {
+  .contact-info .ellipse-small {
+    width: 138px;
+    height: 138px;
+    right: 70px;
+    bottom: 71px;
+  }
 }
 
 .contact-info-group {
@@ -617,8 +682,12 @@ header:has(.mobile-toggle:checked) img {
   text-decoration: none;
   margin-top: 15px;
 }
-.contact-info-group:last-child {
-  margin-bottom: 58px;
+@media (min-width: 1025px) {
+  .contact-info-group {
+    flex-direction: row;
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
 }
 .contact-info-group p {
   font-size: 12px;
@@ -630,6 +699,15 @@ header:has(.mobile-toggle:checked) img {
   line-height: normal;
   letter-spacing: normal;
 }
+@media (min-width: 1025px) {
+  .contact-info-group p {
+    max-width: 288px;
+    font-size: 16px;
+    margin-top: 0;
+    margin-left: 25px;
+    text-align: start;
+  }
+}
 
 .contact-socia {
   padding: 58px 0 25px;
@@ -638,6 +716,223 @@ header:has(.mobile-toggle:checked) img {
   flex-direction: row;
   justify-content: space-between;
 }
+@media (min-width: 1025px) {
+  .contact-socia {
+    padding: 0;
+    margin-top: auto;
+    margin-bottom: 45px;
+  }
+}
 .contact-socia img {
   width: 30px;
+}
+@media (min-width: 1025px) {
+  .contact-socia img:hover {
+    filter: invert(100%);
+  }
+}
+
+.contact-form {
+  max-width: 695px;
+  font-family: Poppins;
+  margin-top: 30px;
+  font-size: small;
+}
+@media (min-width: 1025px) {
+  .contact-form {
+    padding: 0 50px;
+    margin-top: 60px;
+  }
+}
+.contact-form img {
+  width: 116px;
+  transform: translate(172px, 2px);
+}
+@media (min-width: 1025px) {
+  .contact-form img {
+    width: 265px;
+    transform: translate(247px, 2px);
+  }
+}
+
+.general-data {
+  max-width: 695px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 25px;
+}
+@media (min-width: 1025px) {
+  .general-data {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 45px;
+    gap: 40px;
+  }
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding: 0 21px;
+}
+@media (min-width: 1025px) {
+  .row {
+    width: calc(50% - 20px);
+    padding: 0;
+    justify-content: space-between;
+  }
+}
+.row label {
+  font-size: 12px;
+  font-weight: 500;
+  color: #8d8d8d;
+}
+.row label:hover {
+  cursor: pointer;
+}
+.row input {
+  border: 0;
+  border-bottom: 1px solid #8d8d8d;
+  padding-bottom: 10px;
+}
+.row input::-moz-placeholder {
+  font-size: 14px;
+  font-weight: 500;
+  color: #8d8d8d;
+}
+.row input::placeholder {
+  font-size: 14px;
+  font-weight: 500;
+  color: #8d8d8d;
+}
+
+.row:has(input:focus) label {
+  color: #000;
+}
+
+legend {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: normal;
+  color: #000;
+  padding-left: 21px;
+}
+@media (min-width: 1025px) {
+  legend {
+    padding-left: 0;
+  }
+}
+
+.select-subject {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 600px;
+  justify-content: space-between;
+  padding: 14px 21px 0px 21px;
+  margin-bottom: 25px;
+  gap: 14px;
+}
+@media (min-width: 1025px) {
+  .select-subject {
+    padding: 14px 0;
+    flex-wrap: nowrap;
+  }
+}
+
+.select {
+  width: calc(50% - 10px);
+  font-size: 12px;
+  font-weight: normal;
+  color: #000;
+  line-height: 1.67;
+  display: flex;
+  align-items: center;
+}
+.select:hover {
+  cursor: pointer;
+}
+@media (min-width: 1025px) {
+  .select {
+    width: auto;
+  }
+}
+.select input {
+  display: none;
+}
+.select label::before {
+  content: " ";
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background-color: #c9c9c9;
+  display: inline-block;
+  position: relative;
+  top: 1px;
+  margin-right: 12px;
+}
+.select input:checked + label::before {
+  background-image: url("../../assets/icons/check.svg");
+}
+
+.message {
+  padding: 0 21px;
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1025px) {
+  .message {
+    padding: 0;
+  }
+}
+.message p {
+  font-size: 12px;
+  font-weight: 500;
+  color: #8d8d8d;
+  margin-bottom: 10px;
+}
+.message textarea {
+  border: none;
+  border-bottom: 1px solid #8d8d8d;
+  margin-bottom: 25px;
+  max-width: 595px;
+  max-height: 55px;
+  resize: none;
+}
+.message textarea::-moz-placeholder {
+  font-size: 14px;
+  font-weight: 500;
+}
+.message textarea::placeholder {
+  font-size: 14px;
+  font-weight: 500;
+}
+@media (min-width: 1025px) {
+  .message textarea {
+    margin-bottom: 45px;
+  }
+}
+.message button {
+  border: none;
+  color: #fff;
+  background-color: #000;
+  font-size: 12.9px;
+  font-weight: 500;
+  display: block;
+  padding: 10px 0;
+  border-radius: 3px;
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.12);
+}
+@media (min-width: 1025px) {
+  .message button {
+    width: 214px;
+    padding: 15px 48px;
+    border-radius: 5px;
+    margin-right: 0;
+    margin-left: auto;
+  }
 }
