--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -30,8 +30,10 @@ header:has(.mobile-toggle:checked) {
 }
 
 .main-menu {
-    margin-right: 60px;
-    margin-left: auto;
+    @include breakpoint("medium"){
+        margin-right: 60px;
+        margin-left: auto;
+    }
 }
 
 .header-content {
@@ -193,6 +195,10 @@ header:has(.mobile-toggle:checked) {
     display: flex;
     align-items: center;
     flex-direction: column;
+
+    @include breakpoint("medium") {
+        margin-top: 80px;
+    }
 }
 
 .main-title {
@@ -201,11 +207,20 @@ header:has(.mobile-toggle:checked) {
     width: 184px; 
     margin-bottom: 25px;
 
+    @include breakpoint("medium") {
+        width: 500px;
+        margin-bottom: 50px;
+    }
+
     h1 {
         font-size: 24px;
         font-weight: bold;
         color: $black;
         margin-bottom: 10px;
+
+        @include breakpoint("medium") {
+            font-size: 40px;
+        }
     }
 
     p {
@@ -213,13 +228,25 @@ header:has(.mobile-toggle:checked) {
         font-weight: 500;
         color: $darkgrey;
         line-height: normal;
+
+        @include breakpoint("medium") {
+            font-size: 18px;
+        }
     }
 }
 
 .contact-info-form {
+    box-shadow: 0 0 60px 30px rgba(0, 0, 0, 0.03);
+    background-color: $white;
     display: flex;
     flex-direction: column;
     margin: 0 25px;
+
+    @include breakpoint("medium") {
+        flex-direction: row;
+        max-width: 1200px;
+        max-height: 667px;
+    }
 }
 
 .contact-info {
@@ -231,19 +258,36 @@ header:has(.mobile-toggle:checked) {
     border-radius: 5px;
     font-family: Poppins;
     position: relative;
+    padding: 15px 0 0 0;
+
+    @include breakpoint("medium") {
+        width: 491px;
+        align-items: start;
+        padding: 40px 0 0 40px;
+
+    }
 
     h3 {
         font-size: 20px;
         font-weight: 600;
-        margin: 15px 0 6px; 
+        margin-bottom: 6px; 
         line-height: normal;
         letter-spacing: normal;
+
+        @include breakpoint("medium") {
+            font-size: 28px;
+        }
     }
 
     & > p {
         font-size: 12px;
         font-weight: 400;
         color: $lightgrey;
+
+        @include breakpoint("medium") {
+            font-size: 18px;
+            margin-bottom: 111px;
+        }
     }
 
     & > img {
@@ -252,6 +296,11 @@ header:has(.mobile-toggle:checked) {
         bottom: 0;
         width: 80px;
         height: 102px;
+
+        @include breakpoint("medium") {
+            width: 180px;
+            height: 183px;
+        }
     }
 
     .ellipse-small {
@@ -259,6 +308,13 @@ header:has(.mobile-toggle:checked) {
         height: 54px;
         right: 31px;
         bottom: 52px;
+
+        @include breakpoint("medium") {
+            width: 138px;
+            height: 138px;
+            right: 70px;
+            bottom: 71px;
+        }
     }
 }
 
@@ -269,9 +325,12 @@ header:has(.mobile-toggle:checked) {
     text-decoration: none;
     margin-top: 15px;
 
-    &:last-child {
-        margin-bottom: 58px;
+    @include breakpoint("medium") {
+        flex-direction: row;
+        margin-top: 0;
+        margin-bottom: 50px;
     }
+
 
     p {
         font-size: 12px;
@@ -282,6 +341,14 @@ header:has(.mobile-toggle:checked) {
         text-align: center;
         line-height: normal;
         letter-spacing: normal;
+
+        @include breakpoint("medium") {
+            max-width: 288px;
+            font-size: 16px;
+            margin-top: 0;
+            margin-left: 25px;
+            text-align: start;
+        }
     }
    
 }
@@ -292,8 +359,221 @@ header:has(.mobile-toggle:checked) {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    @include breakpoint("medium") {
+        padding: 0;
+        margin-top: auto;
+        margin-bottom: 45px;
+    }
      
     img {
         width: 30px;
+        @include breakpoint("medium") {
+
+        &:hover{
+            filter: invert(100%); 
+        }
+        }
+        
+    }
+}
+
+.contact-form {
+    max-width: 695px;
+    font-family: Poppins;
+    margin-top: 30px;
+    font-size: small;
+
+    @include breakpoint("medium") {
+        padding: 0 50px;
+        margin-top: 60px;
+    }
+
+    img {
+        width: 116px;
+        transform: translate(172px, 2px);
+
+        @include breakpoint("medium") {
+            width: 265px;
+            transform: translate(247px, 2px)
+        }
+    }
+}
+
+.general-data {
+    max-width: 695px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 25px;
+
+    @include breakpoint("medium") {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-bottom: 45px;
+        gap: 40px;
+    }
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding: 0 21px;
+
+    @include breakpoint("medium") {
+        width: calc(50% - 20px);
+        padding: 0;
+        justify-content: space-between;
+
+    }
+
+    label {
+        font-size: 12px;
+        font-weight: 500;
+        color: $grey;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    input {
+        border: 0;
+        border-bottom: 1px solid $grey;
+        padding-bottom: 10px;
+
+        &::placeholder {
+            font-size: 14px;
+            font-weight: 500;
+            color: $grey;
+        }
+    }
+}
+
+.row:has(input:focus) label {
+    color: $black;
+}
+
+legend {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: normal;
+    color: $black;
+    padding-left: 21px;
+
+    @include breakpoint("medium") {
+        padding-left: 0;
+    }
+}
+
+.select-subject {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 600px;
+    justify-content: space-between;
+    padding: 14px 21px 0px 21px;
+    margin-bottom: 25px;
+    gap: 14px;
+
+    @include breakpoint("medium") {
+        padding: 14px 0;
+        flex-wrap: nowrap;
+    }
+}
+
+.select {
+    width: calc(50% - 10px);
+    font-size: 12px;
+    font-weight: normal;
+    color: $black;
+    line-height: 1.67; 
+    display: flex;
+    align-items: center;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    @include breakpoint("medium") {
+        width: auto;
+    }
+
+    input {
+        display: none;
+    }
+
+    label::before {
+        content: " ";
+        width: 13px;
+        height: 13px;
+        border-radius: 50%;
+        background-color: $lightgrey;
+        display: inline-block;
+        position: relative;
+        top: 1px;
+        margin-right: 12px;
+    }
+
+    input:checked + label::before {
+        background-image: url("../../assets/icons/check.svg");
+    }
+}
+
+.message {
+    padding: 0 21px;
+    display: flex;
+    flex-direction: column;
+
+    @include breakpoint("medium") {
+        padding: 0;
+    }
+
+    p {
+        font-size: 12px;
+        font-weight: 500;
+        color: $grey;
+        margin-bottom: 10px;
+    }
+
+    textarea {
+        border: none;
+        border-bottom: 1px solid $grey;
+        margin-bottom: 25px;
+        max-width: 595px;
+        max-height: 55px;
+        resize: none;
+
+        &::placeholder {
+            font-size: 14px;
+            font-weight: 500;
+        }
+
+        @include breakpoint("medium") {
+            margin-bottom: 45px;
+        }
+    }
+
+    button {
+        border: none;
+        color: $white;
+        background-color: $black;
+        font-size: 12.9px;
+        font-weight: 500;
+        display: block;
+        padding: 10px 0;
+        border-radius: 3px;
+        box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.12);
+
+        @include breakpoint("medium") {
+            width: 214px;
+            padding: 15px 48px;
+            border-radius: 5px;
+            margin-right: 0;
+            margin-left: auto;
+        }
     }
 }
