--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -2,10 +2,15 @@
     box-sizing: border-box;
 }
 
-body {
+header,
+main {
     min-width: 320px;
     max-width: 1240px;
     margin: 0 auto;
+}
+
+footer{
+    
 }
 
 //--------------------------HEADER-----------------------//
@@ -575,5 +580,192 @@ legend {
             margin-right: 0;
             margin-left: auto;
         }
+    }
+}
+
+//------------------------------FOOTER----------------------//
+
+footer {
+    background-color: $black;
+    margin-top: 50px;
+    min-width: 320px;
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 549px;
+    padding: 20px 20px 35px 20px;
+
+    @include breakpoint("medium") {
+        max-width: 1320px;
+    }
+}
+
+.footer-title {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    span {
+        width: 100%;
+        height: 1px;
+        background-color: $white;
+        margin-top: 20px;
+    }
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    font-family: Poppins;
+    margin-top: 30px;
+
+    @include breakpoint("medium") {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.footer-reach-company {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    @include breakpoint("medium") {
+        padding: 0 0 0 20px;
+    }
+}
+
+.footer-reach {
+    max-width: 150px;
+
+    @include breakpoint("medium") {
+        max-width: 295px;
+    }
+
+    h3 {
+        font-size: 16px;
+        font-weight: 600;
+        color: $white;
+        margin-bottom: 15px;
+        line-height: 1.63;
+    }
+}
+
+.footer-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 14px;
+    color: $white;
+    font-size: 12px;
+    font-weight: normal;
+    text-decoration: none;
+    line-height: normal;
+
+    @include breakpoint("medium") {
+        flex-direction: row;
+    }
+
+    &:not(:last-child) {
+        margin-bottom: 18px;
+    }
+}
+
+.footer-name-column {
+    font-size: 16px;
+    font-weight: 600;
+    color: $white;
+    margin-bottom: 20px;
+}
+
+.footer-column {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    font-weight: normal;
+
+    a {
+        color: $white;
+        text-decoration: none;
+
+        &:not(:last-child) {
+            margin-bottom: 25px;
+        }
+    }
+    
+}
+
+.footer-legal-links {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+
+    @include breakpoint("medium") {
+        margin-top: 0;
+        width: 27%;
+    }
+}
+
+.footer-newsletter {
+    margin: 0 auto;
+    width: 320px;
+    margin-top: 40px;
+    padding: 17px 29px 14px 14px;
+    background-color: #0d0d0d;
+
+    @include breakpoint("medium") {
+        margin: 0;
+        width: 304px;
+    }
+
+    label {
+        color: $white;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 1.63;
+        display: block;
+        margin-bottom: 25px;
+    }
+
+    span {
+        max-width: 277px;
+        font-size: 14px;
+        font-weight: 500;
+        color: $darkgrey;
+        line-height: normal;
+        display: block;
+        margin-top: 20px;
+    }
+}
+
+.footer-input-button {
+    width: 277px;
+    display: flex;
+    flex-direction: row;
+
+    input {
+        width: 62%;
+        padding: 11px 0 11px 10px;
+        background-color: #1a1a1a;
+        border: none;
+
+        &::placeholder {
+            font-size: 11px;
+            font-weight: normal; 
+            color: #616161;
+        }
+    }
+
+    button {
+        width: 38%;
+        background-color: $black;
+        font-size: 12px;
+        font-weight: 500;
+        color: $white;
+        padding: 11px 22px;
+        border: none;
     }
 }
