--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -642,6 +642,7 @@ footer {
 
     @include breakpoint("medium") {
         max-width: 295px;
+        margin-right: 35px;
     }
 
     h3 {
@@ -650,6 +651,11 @@ footer {
         color: $white;
         margin-bottom: 15px;
         line-height: 1.63;
+
+        @include breakpoint("medium") {
+            font-size: 18px;
+            line-height: 1.44;
+        }
     }
 }
 
@@ -666,10 +672,16 @@ footer {
 
     @include breakpoint("medium") {
         flex-direction: row;
+        font-size: 16px;
+        gap: 27px;
     }
 
     &:not(:last-child) {
         margin-bottom: 18px;
+
+        @include breakpoint("medium") {
+            margin-bottom: 24px;
+        }
     }
 }
 
@@ -678,13 +690,23 @@ footer {
     font-weight: 600;
     color: $white;
     margin-bottom: 20px;
+
+    @include breakpoint("medium") {
+        font-size: 18px;
+        margin-bottom: 28px;
+    }
 }
 
 .footer-column {
+    width: 42%;
     display: flex;
     flex-direction: column;
     font-size: 12px;
     font-weight: normal;
+
+    @include breakpoint("medium") {
+        font-size: 16px;
+    }
 
     a {
         color: $white;
@@ -692,6 +714,10 @@ footer {
 
         &:not(:last-child) {
             margin-bottom: 25px;
+
+            @include breakpoint("medium") {
+                margin-bottom: 38px;
+            }
         }
     }
     
@@ -712,6 +738,8 @@ footer {
 .footer-newsletter {
     margin: 0 auto;
     width: 320px;
+    height: 184px;
+    border-radius: 10px;
     margin-top: 40px;
     padding: 17px 29px 14px 14px;
     background-color: #0d0d0d;
@@ -728,6 +756,10 @@ footer {
         line-height: 1.63;
         display: block;
         margin-bottom: 25px;
+
+        @include breakpoint("medium") {
+            font-size: 18px;
+        }
     }
 
     span {
